# USP

./: pyproject.toml
examples/doe_example/: analyze_doe_run.py
examples/doe_example/ferm_08/: run_config.yaml
examples/doe_example/ferm_opt/: run_config.yaml
examples/real_data_example/: real_data_analysis.py  run_config.yaml
examples/real_data_example/data/: rawdata.csv  samples.xlsx
examples/real_data_example/results/: processed_data.csv  samples_points_data.csv
src/upstream_analysis/: __init__.py
src/upstream_analysis/analysis/: delisa_media_config.yaml
src/upstream_analysis/config/: default_config.yaml  loader.py
src/upstream_analysis/data/: alignment.py  cleaning.py  parser.py  processor.py
src/upstream_analysis/visualization/: plotting.py
